﻿[Unreleased]

### Added
	- Masstransit

### Changed

### Removed

[v1.2.0 - 2019/11/26]

### Added

	- UnitofWork
	- Efacture upload

### Changed

	- Recompiled .net core 3.1

### Removed

[v1.0.1 - 2019/13/12]

### Added

	- Serilog : log to file
	- Code review for better error handling
	- ERROR_CODES: unhandled exception

### Changed

	- Using platform apikeys instead of in code tenants for the allowed ApiKeys

### Removed

[v1.0.0 - 2019/11/21]

### Added

	- Created API + Controller library
	- Authenticate function
	- BeginOfTransfer functionality
	- UploadFiles functionality
	- EndOfTransfer functionality
	- AbortTransfer functionality
	- EPAIE.REPO.DLL reference
	- Multi tenant authentication with Application ID and Username+Password
	- Check file fingerprint if the fingerprint and algorithm are given

### Changed

### Removed