@@ -5,6 +5,7 @@
   },
   "AppSettings": {
     "VirtualDirectory": "public.api",
+    "MetricsRestApiUrl": "http://localhost:81/metrics.api/",
     "PlatformRestApiUrl": "http://localhost:81/platform.api/",
     "UploadFolder": "D:/Cecurity/Data/Upload/PUBLIC",
     "EpaieRestApiUrl": "http://localhost:81/epaie.api/",
