@@ -5,19 +5,20 @@
   },
   "AppSettings": {
     "VirtualDirectory": "",
-    "PlatformRestApiUrl": "http://localhost:81/platform.api/",
+    "MetricsRestApiUrl": "https://appdev.cecurity.com/metrics.api/",
+    "PlatformRestApiUrl": "https://appdev.cecurity.com/platform.api/",
     "UploadFolder": "D:/Cecurity/Data/Hotfolders/EPaie/Upload",
-    "EpaieRestApiUrl": "http://localhost:81/epaie.api/",
+    "EpaieRestApiUrl": "http://localhost:5002/",
     "EpaiePreprocessingFolder": "D:/Cecurity/Data/Hotfolders/EPaie/Preprocessing",
     "EpaieLegacyFolder": "D:/Cecurity/Data/Hotfolders/EPaie/LegacyFolder",
-    "EfactureRestApiUrl": "http://localhost:81/efacture.api/",
+    "EfactureRestApiUrl": "https://appdev.cecurity.com/efacture.api/",
     "EfacturePreprocessingFolder": "D:/Cecurity/Data/Hotfolders/EFacture/Upload",
     "EfacturePrevalidationFolder": "D:/Cecurity/Data/Hotfolders/EFacture/UpdateCSVReferences",
-    "BaseUrl": "http://platformsrvbst/demat/"
+    "BaseUrl": "http://pltfrma2d1/demat/"
   },
   "MassTransit": {
     "RabbitMQ": {
-      "HostAddress": "platformsrvbst",
+      "HostAddress": "pltfrma2d1",
       "Username": "saMQ",
       "Password": "rurQD5mBr8EK5d6S"
     }
